--- a/html/login.html
+++ b/html/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Smart Book - Login</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/signup.css">
-    <script src="../js/account.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/signup.css">
+    <script src="/js/account.js"></script>
 </head>
 
 <body style="margin: 0; padding: 0;">
@@ -19,13 +19,13 @@
         <div id="header">
             <h2 style="margin: 0;">Login</h2>
         </div>
-        <form action="" id="main" onsubmit="return login();">
+        <form action="/" id="main" onsubmit="return login();">
             <div>
-                <label class="txt" for="username">Username</label>
+                <label class="txt" for="usernamelogin">Username</label>
                 <input id="usernamelogin" class="inp" type="text" placeholder="Username">
             </div>
             <div>
-                <label class="txt" for="password">Password</label>
+                <label class="txt" for="passwordlogin">Password</label>
                 <input id="passwordlogin" class="inp" type="password" placeholder="Password" onclick="this.select()" onfocus="this.select()">
             </div>
             <div style="text-align: right; padding-right: 23px;">
