--- a/html/signup.html
+++ b/html/signup.html
@@ -34,7 +34,7 @@
             </div>
             <div>
                 <label class="txt" for="confirm">Password</label>
-                <input id="confirmpassword" class="inp" type="password" placeholder="Confirm Password" onclick="this.select()" onfocus="this.select()">
+                <input id="confirm" class="inp" type="password" placeholder="Confirm Password" onclick="this.select()" onfocus="this.select()">
             </div>
             <div style="text-align: right; padding-right: 23px;">
                 <a href="login.html">Login</a>
