--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
         <div id="banner" >
             <div id="previous" >
-                <i class="fas fa-regular fa-angle-left" onclick="prev()"></i>
+                <i class="fas fa-regular fa-angle-left" title="Previous" onclick="prev()"></i>
             </div>
             <div id="next">
-                <i class="fas fa-regular fa-angle-right" onclick="next()"></i>
+                <i class="fas fa-regular fa-angle-right" title="Next" onclick="next()"></i>
             </div>
         </div>
         <div id="content">
