update menu + cart icon + button toggle pass when login
update menu + cart icon + button toggle pass when login

--- a/index.html
+++ b/index.html
@@ -35,36 +35,93 @@
                 <li class="parent-menu">
                     <a href="" title="Sách"><div>Sách <i class="fas fa-solid fa-caret-down"></i></div></a>
                     <ul class="sub-topmenu">
-                        <li><a href="">Menu</a></li>
                         <li>
-                            <a href="">Menu <i class="fas fa-solid fa-caret-down"></i></a>
-                            <ul class="sub-topmenu">
-                                <li><a href="">Menu</a></li>
-                                <li><a href="">Menu</a></li>
-                                <li><a href="">Menu</a></li>
-                                <li><a href="">Menu</a></li>
+                            <a href="">Giáo dục <i class="fas fa-solid fa-caret-down"></i></a>
+                            <ul class="sub-topmenu" id="sub-topmenubook1">
+                                <li><a href="">Sách giáo khoa</a></li>
+                                <li><a href="">Sách tham khảo</a></li>
+                                <li><a href="">Từ điển</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Menu</a></li>
-                        <li><a href="">Menu</a></li>
+                        <li>
+                            <a href="">Văn học <i class="fas fa-solid fa-caret-down"></i></a>
+                            <ul class="sub-topmenu" id="sub-topmenubook2">
+                                <li><a href="">Truyện ngắn</a></li>
+                                <li><a href="">Truyện dài</a></li>
+                                <li><a href="">Thơ</a></li>
+                                <li><a href="">Khác</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="">Tiểu thuyết</a></li>
+                        <li>
+                            <a href="">Kinh tế <i class="fas fa-solid fa-caret-down"></i></a>
+                            <ul class="sub-topmenu" id="sub-topmenubook4">
+                                <li><a href="">Quản trị</a></li>
+                                <li><a href="">Marketing</a></li>
+                                <li><a href="">Nhân Vật</a></li>
+                                <li><a href="">Khởi nghiệp</a></li>
+                                <li><a href="">Chứng khoán</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="">Tâm lý/Kỹ năng sống <i class="fas fa-solid fa-caret-down"></i></a>
+                            <ul class="sub-topmenu" id="sub-topmenubook5">
+                                <li><a href="">Tâm lý</a></li>
+                                <li><a href="">Kỹ năng sống</a></li>
+                                <li><a href="">Hạt giống tâm hồn</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="">Lịch sử <i class="fas fa-solid fa-caret-down"></i></a>
+                            <ul class="sub-topmenu" id="sub-topmenubook6">
+                                <li><a href="">Việt Nam</a></li>
+                                <li><a href="">Nước ngoài</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="">Thiếu nhi <i class="fas fa-solid fa-caret-down"></i></a>
+                            <ul class="sub-topmenu" id="sub-topmenubook7">
+                                <li><a href="">Truyện thiếu nhi</a></li>
+                                <li><a href="">Tô màu</a></li>
+                                <li><a href="">Luyện chữ</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
 
                 <li class="parent-menu">
                     <a href="" title="Dụng Cụ"><div>Dụng Cụ <i class="fas fa-solid fa-caret-down"></i></div></a>
                     <ul class="sub-topmenu">
-                        <li><a href="">Menu</a></li>
                         <li>
-                            <a href="">Menu <i class="fas fa-solid fa-caret-down"></i></a>
-                            <ul class="sub-topmenu">
-                                <li><a href="">Menu</a></li>
-                                <li><a href="">Menu</a></li>
-                                <li><a href="">Menu</a></li>
-                                <li><a href="">Menu</a></li>
+                            <a href="">Dụng cụ học sinh <i class="fas fa-solid fa-caret-down"></i></a>
+                            <ul class="sub-topmenu" id="sub-topmenudevice1">
+                                <li><a href="">Bút viết</a></li>
+                                <li><a href="">Tẩy</a></li>
+                                <li><a href="">Thước kẻ</a></li>
+                                <li><a href="">Máy tính cầm tay</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Menu</a></li>
-                        <li><a href="">Menu</a></li>
+                        <li>
+                            <a href="">Dụng cụ văn phòng <i class="fas fa-solid fa-caret-down"></i></a>
+                            <ul class="sub-topmenu" id="sub-topmenudevice2">
+                                <li><a href="">Sổ tay/Ghi chú</a></li>
+                                <li><a href="">Túi/Bìa đụng hồ sơ</a></li>
+                                <li><a href="">Cắt/Dán</a></li>
+                                <li><a href="">Khác</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="">Dụng cụ vẽ <i class="fas fa-solid fa-caret-down"></i></a>
+                            <ul class="sub-topmenu" id="sub-topmenudevice3">
+                                <li><a href="">Bảng vẽ</a></li>
+                                <li><a href="">Bút vẽ</a></li>
+                                <li><a href="">Bút màu</a></li>
+                                <li><a href="">Màu nước</a></li>
+                                <li><a href="">Cọ vẽ</a></li>
+                                <li><a href="">Khác</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="">Khác</a></li>
                     </ul>
                 </li>
 
@@ -89,6 +146,7 @@
                     Nguyễn Văn A
 
                 </p>&nbsp;
+                <i class="fas fa-solid fa-cart-shopping" title="Giỏ hàng"></i>&nbsp;
                 <i class="fas fa-solid fa-bell" title="Thông báo"></i>&nbsp;
                 <i class="fas fa-solid fa-right-to-bracket" id="icon-login" title="Đăng nhập" onclick="showLogin()"></i>
             </div>
@@ -367,8 +425,9 @@
             <div>
                 <label class="txt" for="password-login">Password</label>
                 <input id="password-login" class="inp" type="password" placeholder="Password" onclick="this.select()" onfocus="this.select()">
+                <i class="fas fa-solid fa-eye-slash" id="eyes" onclick="togglePass()"></i>
             </div>
-            <div style="text-align: right; padding-right: 23px; cursor: pointer;" onclick="showSignUp()">
+            <div style="margin-left: 370px; padding-right: 23px; cursor: pointer;" onclick="showSignUp()">
                 <h3>Sign Up</h3>
             </div>
             <div id="footer-login">
@@ -397,7 +456,7 @@
                 <label class="txt" for="confirm-signup">Password</label>
                 <input id="confirm-signup" class="inp" type="password" placeholder="Confirm Password" onclick="this.select()" onfocus="this.select()">
             </div>
-            <div style="text-align: right; padding-right: 23px; cursor: pointer;" onclick="showLogin()">
+            <div style="margin-left: 378px; padding-right: 23px; cursor: pointer;" onclick="showLogin()">
                 <h3>Login</h3>
             </div>
             <div id="footer-signup">
