--- a/index.html
+++ b/index.html
@@ -299,75 +299,18 @@
                         </div>
                     </div>
                 </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
-                </li>
             </ul>
+            <div class="content-paging">
+                <ul class="page">
+                    <li class="button-prev-next-active"><i class="fas fa-chevron-circle-left"></i></li>
+                    <div class="number-page" id="numeber-page">
+                        <li class="active">1</li>
+                        <li>2</li>
+                        <li>3</li>
+                    </div>
+                    <li class="button-prev-next"><i class="fas fa-chevron-circle-right"></i></li>
+                </ul>
+            </div>
         </div>
 
         <div id="footer">
