create subfolders for images

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 
         <div id="banner">
             <div id="previous-banner">
-                <i class="fas fa-regular fa-angle-left" title="Ảnh sau" onclick="prevBanner()"></i>
+                <i class="fas fa-regular fa-angle-left" title="Ảnh trước" onclick="prevBanner()"></i>
             </div>
             <div id="next-banner">
-                <i class="fas fa-regular fa-angle-right" title="Ảnh trước" onclick="nextBanner()"></i>
+                <i class="fas fa-regular fa-angle-right" title="Ảnh sau" onclick="nextBanner()"></i>
             </div>
         </div>
         <div id="content">
@@ -167,7 +167,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -184,7 +184,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -201,7 +201,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -218,7 +218,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -235,7 +235,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -252,7 +252,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -269,7 +269,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -286,7 +286,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -303,7 +303,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -320,7 +320,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -337,7 +337,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
@@ -354,7 +354,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="assets/images/product/product-tst.jpg" alt="">
+                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
                             </a>
                             <a href="" class="buynow">Mua Ngay</a>
                         </div>
