update detail products

--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
             createAdmin();
             initBanner();
             runBanner();
-            // renderProduct();
             paging();
         }
     </script>
     <div>
         <div id="header">
             <div id="logo">
-               <a href="/"><img src="assets/images/logo.png" alt="Smart Book Logo"></a> 
+               <a href=""><img src="assets/images/logo.png" alt="Smart Book Logo"></a> 
             </div>
 
             <ul id="topmenu">
@@ -419,7 +418,7 @@
             <i class="fa-solid fa-xmark" onclick="closediv()"></i>
         </div>
         <div id="detail">
-            <img src="/assets/images/product/product-2.jpg" alt="">
+            <!-- <img src="/assets/images/product/product-2.jpg" alt="">
             <div id="detail-pro">
                 <ul>
                     <li><h2>Toi thay hoa vang tren co xanh</h2></li>
@@ -440,7 +439,7 @@
                         <div>Thêm Vào giỏ hàng</div>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </div>
     </div>
